# football_analyzer_mcp

./: .gitignore  CROSS_PLAY_ANALYSIS_REPORT.md  FINAL_OPTIMIZATION_PLAN.md  FULL_PRESSURE_TEST_REPORT.md  README.md  UPGRADE_SUMMARY.md  __init__.py  analysis_tools.py  architecture_audit_report.md  cache.py  claude_desktop_config.json  evaluation.xml  evaluation_depth_v3.xml  interfaces.py  pyproject.toml  requirements.txt  scan_tools.py  server.py  test_mcp_full.py  test_mcp_multi_dim.py  test_mcp_multi_dim_v2.py  test_workflows.py  tool_inventory.md
docs/: DEEP_CROSS_PLAY_ANALYSIS.md  EVOLUTION_PATH_REPORT.md  FINAL_AUDIT_REPORT.md  FINAL_EVALUATION_REPORT.md  MCP_OPTIMIZATION_REPORT.md  MCP_PYTHON_GUIDE_AUDIT.md  PREDICTION_LOGIC_AUDIT.md  REVIEW_REPORT.md  complete_test_report.json  lottery_mcp_evaluation.xml  module_synergy_complete.md  progress_summary.md
legacy_files/: analysis_pipeline.py  betting_tools.py  data_tools.py  event_bus.py  unified_pipeline.py  workflow_engine.py
lottery_mcp/: __init__.py  __main__.py  server.py
lottery_mcp/analysis/: __init__.py  advanced_enhancements.py  advanced_ml_integration.py  advisor.py  backtest_framework.py  engine.py  historical_calibrator.py  historical_features.py  mixed_parlay.py  models.py  odds_normalizer.py  play_advanced.py  play_analysis.py  play_clustering.py  play_enhancement_plan.py  play_strategies.py  strategy.py
lottery_mcp/analysis/calibration/: __init__.py  bf_zjq_calibrator.py  cross_play_validator.py  leverage_analyzer.py  spf_bqc_calibrator.py
lottery_mcp/betting/: __init__.py  ai.py  engine.py  value.py
lottery_mcp/core/: __init__.py  cache.py  event_bus.py  interfaces.py  plugin_registry.py
lottery_mcp/data/: __init__.py  fetcher.py  historical.py  sources.py  team_mapping.py
lottery_mcp/knowledge/jingcai/play_types/: 01_win_draw_loss.json  02_handicap_win_draw_loss.json  03_score.json  04_total_goals.json  05_half_full.json  06_mixed_parlay.json
lottery_mcp/models/: __init__.py  schemas.py
lottery_mcp/rules/: __init__.py  constraint_compiler.py  engine.py  guardrails.py
lottery_mcp/tools/: __init__.py  analysis_pipeline.py  analysis_tools.py  betting_tools.py  data_tools.py  enhanced_tools.py  enhanced_tools_mcp.py  guardrails_tools.py  helpers.py  historical_tools.py  output_schemas.py  prediction_tools.py  prompts.py  resources.py  rules_tools.py  system_tools.py  workflows.py
scripts/: architecture_guard.py
tests/: __init__.py  test_annotations.py  test_error_handling.py  test_integration.py  test_p0_fixes.py  test_pagination.py  test_recommendation_algorithm.py  test_rules_engine.py  test_rules_structured_output.py  test_statistical_models.py  test_validation.py
