[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lottery-mcp"
version = "2.0.0"
description = "竞彩足球 MCP 服务包 - 彩票规则验证与风控助手"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lottery MCP Team"}
]
keywords = ["lottery", "mcp", "football", "betting", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "scipy>=1.10.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
scraping = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
lottery-mcp = "lottery_mcp:run_server"
lottery-mcp-server = "lottery_mcp.server:run_mcp_server"

[project.urls]
Homepage = "https://github.com/lottery-mcp/lottery-mcp"
Documentation = "https://github.com/lottery-mcp/lottery-mcp#readme"
Repository = "https://github.com/lottery-mcp/lottery-mcp"
Issues = "https://github.com/lottery-mcp/lottery-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lottery_mcp*"]

[tool.setuptools.package-data]
lottery_mcp = ["knowledge/**/*.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["scipy.*", "aiohttp.*", "playwright.*", "httpx.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
